
internal class AnimationStringList 
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string Jump = "Jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCieling = "isOnCieling";
    internal static string Attack1 = "Attack1";
    internal static string Attack2 = "Attack2";
    internal static string Attack3 = "Attack3";
    internal static string Attack = "Attack";
    internal static string canMove = "canMove";
    internal static string isDash = "isDash";
    internal static string MagicAttack = "MagicAttack";
    internal static string Explode = "Explode";
    internal static string isAlive = "isAlive";
    internal static string Wakeup = "Wakeup";
    internal static string Start = "Start";
    internal static string End = "End";
    internal static string isBlocking = "isBlocking";
}
